# starloco-launcher

./: .gitignore  README.md  pyproject.toml
config/: config.json
src/: __init__.py  __main__.py  config.py
src/api/: __init__.py  client.py  mock.py
src/client/: launcher.py
src/ui/: __init__.py  main.py
src/zaap/: __init__.py  exceptions.py  protocol.py  server.py
